fix nav flicker

--- a/site/coral.ru/css/main.less
+++ b/site/coral.ru/css/main.less
@@ -98,7 +98,6 @@ section.sticky {
 		top: 0;
 		margin: 0;
 		.shady(2px, 8px, fade(black, 50%));
-		transform: translateZ(0);
 	}
 }
 
